api: add conservation api
